# jaxfilter

./: README.md  __init__.py  discretize.py  ekf.py  ekf_test.py  kf.py  kf_utils.py  pyproject.toml  requirements.txt  rts_smoother.py
src/jaxfilter/: ekf.py  kf.py  kf_utils.py
tests/: ekf_test.py
